#15650 closed bug (fixed)
TextSearch: search string is not properly escaped when passing in grep
Reported by: | X512 | Owned by: | phoudoin |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Applications/TextSearch | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #14336 | |
Platform: | All |
Description
This is hrev53732.
Steps to reproduce:
- Open TextSearch in some directory
- Enter
->Go(
as search string and press search. - Following contents will be displayed multiple times in search results:
grep: invalid option -- '>' Usage: grep [OPTION]... PATTERN [FILE]... Try 'grep --help' for more information.
Change History (6)
comment:2 by , 5 years ago
Fix confirmed.
I uploaded proposed fix to Gerrit: https://review.haiku-os.org/c/haiku/+/2149.
comment:5 by , 5 years ago
Blocking: | 14336 added |
---|
comment:6 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Note:
See TracTickets
for help on using tickets.
Damn. Please someone can try if it will be fixed by adding these lines in Grepper.cpp:Grepper::_RunnerThread(), line 274:
Version
? Thanks